[package]
name = "price-mixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { git = "https://github.com/MyJetTools/service-sdk", tag = "0.2.5", features = [
    "macros",
    "grpc",
    "my-service-bus",
    "my-nosql-data-reader-sdk",
] }
my-nosql-contracts = { tag = "0.1.24", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git" }
cfd-engine-sb-contracts = { tag = "0.2.8", git = "https://github.com/my-cfd-platform/cfd-engine-sb-contracts.git" }

serde = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }
prost = "*"
prost-types = "*"
tokio-util = "*"
async-trait = "*"

my-tcp-sockets = { tag = "0.1.8", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }

prices-tcp-contracts = { tag = "0.1.2", git = "https://github.com/my-cfd-platform/prices-tcp-contracts" }
